# smtp-invoice-io

smtp-invoice-io/: .env  .gitignore  Cargo.toml
smtp-invoice-io/src/: database.rs  imap_io  imap_unseen.rs  main.rs  structs.rs  xml_invoice.rs
