[package]
name = "smtp-invoice-io"
version = "0.1.0"
authors = ["cole"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
tokio = "0.1.22"
native-tls = "0.2.3"
htmlescape="0.3.1"
imap = "1.0.2"
mailparse = "0.8.2"
serde_derive="1.0.102"
serde="1.0.102"
serde-xml-rs="0.3.1"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
dotenv = "0.15.0"
postgres= {version="0.15.2", features = ["with-chrono"]}